--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,6 @@
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
-    <script src="http://tribadin.s3.eu-west-3.amazonaws.com/tribadin.js"></script>
+    <!-- <script src="https://tribadin.s3.eu-west-3.amazonaws.com/tribadin.js"></script> -->
   </body>
 </html>
