--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>hi <span id="name"></span></h1>
+<h1>hi <span id="trb_name">Amin</span></h1>
 <p>Find <span id="adresse"></span> me in app/views/pages/home.html.erb</p>
